--- a/css/leon.css
+++ b/css/leon.css
@@ -107,7 +107,7 @@ body {
     min-width: 150px;
     top: calc(100% + 15px);
     display: none;
-    z-index: 1; 
+    z-index: 1;
 }
 
 .header .links ul::before {
@@ -166,9 +166,43 @@ body {
 
 }
 
-.landing .intro-text p{
+.landing .intro-text p {
     color: var(--main-color);
     font-size: 19px;
     line-height: 25px;
 }
+
 /* End Landing Section  */
+
+/* Start Features Section */
+.features {
+    padding-top: 60px;
+    padding-bottom: 60px;
+    background-color: #f6f6f6;
+}
+
+.features .container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-gap: 30px;
+}
+
+.features .feat {
+    padding: 20px;
+    text-align: center;
+}
+
+.features .feat i {
+    color: var(--main-color);
+}
+
+.features .feat h3 {
+    font-weight: 800;
+    margin: 30px 0;
+}
+.features .feat p {
+    line-height: 1.8;
+    color:#777;
+    font-size: 17 px;
+}
+/* End Features Section */
