--- a/css/leon.css
+++ b/css/leon.css
@@ -4,6 +4,7 @@
     --secondary-color: #2c4755;
     --section-padding: 60px;
     --section-background: #f6f6f6;
+    --main-duration: 0.3s;
 
 }
 
@@ -42,7 +43,9 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
-
+html{
+    scroll-behavior: smooth;
+}
 body {
     font-family: 'Work Sans', sans-serif;
 }
@@ -120,7 +123,7 @@ body {
 
 .header .links .icon span:nth-child(2) {
     width: 60%;
-    transition: 0.3s;
+    transition: var(--main-duration);
 }
 
 .header .links .icon span:last-child {
@@ -159,7 +162,7 @@ body {
     padding: 15px;
     text-decoration: none;
     color: #333;
-    transition: 0.3s;
+    transition: var(--main-duration);
 }
 
 .header .links ul li a:hover {
@@ -383,7 +386,7 @@ body {
     position: absolute;
     background-color: #ebeced;
     width: 100px;
-    height: calc(100% + 80px);
+    height: calc(100% + 30px);
     top: -40px;
     left: -20px;
     z-index: -1;
